5.4.1
-----
1. Translation update.
2. Fix MAI settings button (top right cog icon).
3. Add long-press on player icon in navigation drawer to open sync dialog.
4. Fix move into favourites folder prompt.

5.4.0
-----
 1. Combine main menu and players menu into left hand navigation drawer.
 2. Remove most dialog toolbar menus and replace with buttons.
 3. Remove option to replace player icon with power button, as no longer
    applicable.
 4. Show track subtitles, if enabled in interface settings.
 5. Show full server-side interface settings page, but add a note that not all
    settings affect Material Skin.
 6. Add custom favourite folder icon.
 7. Try to extract dominant, and not average, colour from image when using
    colour from cover.
 8. Invalidate artist list cache if user-defined role exclusion changed,
    unified artist setting changed, or band/composer/conductor in artist list
    changed (some changes require page to be reloaded).
 9. Use coloured mobile navigation, progress, sliders, etc. even when tinting.
10. Change defaults; use colour from cover, tinted background, unpinned queue,
    don't sort favourites.
11. Work-around item selection appearing 'stuck' after clear selection.
12. Remove 'Help' action from menu, and move link into 'Information' dialog.
13. Make sleep, alarm, and sync icons clickable links on non-mobile devices.
14. Combine sleep and alarm status items into 1 line in navigation drawer.
15. Allow apps to have better control over titlebar buttons.
16. Fix unpinned queue slide-in animation.
17. Don't force favourite folders to always be first, only if sort is enabled.
18. If drag favourite over folder then prompt if moving into folder or moving
    to position in list.
19. Allow drag'n'drop in grid view.
20. Only show swipe settings if browser supports touch events.
21. Make background image URLs reactive elements to force refresh.
22. Each time an item is browsed, a menu opened, or a dialog opened, add a