@@ -4,6 +4,7 @@
 2. Fix MAI settings button (top right cog icon).
 3. Add long-press on player icon in navigation drawer to open sync dialog.
 4. Fix move into favourites folder prompt.
+5. Fix emblem position in lists.
 
 5.4.0
 -----
